// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorDialog should render hidden dialog 1`] = `
<ForwardRef(Bootstrap(Modal))
  onHide={[Function]}
  show={false}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Error
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody)) />
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      onClick={[Function]}
    >
      Close
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`ErrorDialog should render visible dialog with one message 1`] = `
<ForwardRef(Bootstrap(Modal))
  onHide={[Function]}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Error
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p
      className="core-error-dialog-message"
      key="Oops. An error occurred."
    >
      Oops. An error occurred.
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      onClick={[Function]}
    >
      Close
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;

exports[`ErrorDialog should render visible dialog with two messages 1`] = `
<ForwardRef(Bootstrap(Modal))
  onHide={[Function]}
  show={true}
>
  <ForwardRef(Bootstrap(ModalHeader))
    closeButton={true}
  >
    <ForwardRef(Bootstrap(ModalTitle))>
      Error
    </ForwardRef(Bootstrap(ModalTitle))>
  </ForwardRef(Bootstrap(ModalHeader))>
  <ForwardRef(Bootstrap(ModalBody))>
    <p
      className="core-error-dialog-message"
      key="Oops. An error occurred."
    >
      Oops. An error occurred.
    </p>
    <p
      className="core-error-dialog-message"
      key="Another error"
    >
      Another error
    </p>
  </ForwardRef(Bootstrap(ModalBody))>
  <ForwardRef(Bootstrap(ModalFooter))>
    <ForwardRef(Bootstrap(Button))
      onClick={[Function]}
    >
      Close
    </ForwardRef(Bootstrap(Button))>
  </ForwardRef(Bootstrap(ModalFooter))>
</ForwardRef(Bootstrap(Modal))>
`;
